--- a/public/kitchensink.html
+++ b/public/kitchensink.html
@@ -21,7 +21,7 @@
 <div id="content">
 
     <form id="side_panel">
-        <h1>Random Data in the Future</h1>
+        <h1>Sensor Time Series</h1>
         <section><div id="legend"></div></section>
         <section>
             <div id="renderer_form" class="toggler">
