--- a/public/kitchensink.html
+++ b/public/kitchensink.html
@@ -5,6 +5,7 @@
     <link type="text/css" rel="stylesheet" href="css/rickshaw/detail.css">
     <link type="text/css" rel="stylesheet" href="css/rickshaw/legend.css">
     <link type="text/css" rel="stylesheet" href="css/rickshaw/extensions.css?v=2">
+    <link type="text/css" rel="stylesheet" href="css/kitchensink.css">
 
     <script src="//d3js.org/d3.v3.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
@@ -15,6 +16,7 @@
     <script src="js/rickshaw/rickshaw.js"></script>
     <script src="js/rickshaw/extensions.js"></script>
     <script src="/socket.io/socket.io.js"></script>
+
 </head>
 <body>
 
@@ -22,6 +24,17 @@
 
     <form id="side_panel">
         <h1>Sensor Time Series</h1>
+
+        <section>
+            <fieldset id ="streamSet">
+                <label for="inputStream">Select input type</label>
+                <select name="inputStream" id="inputStream">
+                    <option selected="selected">Normalized Values</option>
+                    <option>Real Values</option>
+                </select>
+            </fieldset>
+        </section>
+
         <section><div id="legend"></div></section>
         <section>
             <div id="renderer_form" class="toggler">
@@ -81,6 +94,8 @@
         <div id="timeline"></div>
         <div id="preview"></div>
     </div>
+
+    <div id="timebox"></div>
 
 </div>
 <script src="js/kitchensink.js"></script>
