--- a/public/kitchensink.html
+++ b/public/kitchensink.html
@@ -6,7 +6,6 @@
     <link type="text/css" rel="stylesheet" href="css/rickshaw/legend.css">
     <link type="text/css" rel="stylesheet" href="css/rickshaw/extensions.css?v=2">
 
-    <link type="text/css" rel="stylesheet" href="css/jstree/themes/default/style.min.css" />
     <link type="text/css" rel="stylesheet" href="css/kitchensink.css">
 
     <script src="//d3js.org/d3.v3.min.js"></script>
@@ -34,8 +33,8 @@
             <fieldset id ="streamSet">
                 <label for="inputStream">Select input type</label>
                 <select name="inputStream" id="inputStream">
-                    <option>Normalized Raw Values</option>
-                    <option selected>Raw Values</option>
+                    <option selected>Real Values</option>
+                    <option>Standardized Values</option>
                 </select>
             </fieldset>
         </section>
