--- a/public/kitchensink.html
+++ b/public/kitchensink.html
@@ -35,6 +35,7 @@
                 <select name="inputStream" id="inputStream">
                     <option selected>Real Values</option>
                     <option>Standardized Values</option>
+                    <option>Normalized Values</option>
                 </select>
             </fieldset>
         </section>
